Fix dropdown spacing

--- a/social-stories-frontend/src/FilterComponents/filter.css
+++ b/social-stories-frontend/src/FilterComponents/filter.css
@@ -8,9 +8,9 @@
 
 .container
 {
-    width:70%;
+    width:65%;
     display: flex;
-
+    margin-bottom: 10px;
 }
 
 .selectDrop
